--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -6,38 +6,41 @@
 
   padding-top: 118px;
   padding-bottom: 118px;
+  max-width: 480px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero-480.jpg);
+    url(../images/hero-480.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 
   @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../../images/hero-480@2x.jpg');
+      url('../images/hero-480@2x.jpg');
   }
 
   @media (min-width: 768px) {
+    max-width: 768px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-768.jpg);
+      url(../images/hero-768.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero-768@2x.jpg');
+        url('../images/hero-768@2x.jpg');
     }
   }
   @media (min-width: 1200px) {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero-1600.jpg);
+      url(../images/hero-1600.jpg);
 
     @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url('../../images/hero-1600@2x.jpg');
+        url('../images/hero-1600@2x.jpg');
     }
   }
 
@@ -53,9 +56,6 @@
 
     @media (min-width: 768px) {
       width: 768px;
-      margin: 0 auto;
-      padding-left: 15px;
-      padding-right: 15px;
     }
     @media (min-width: 1200px) {
       width: 1200px;
@@ -75,6 +75,10 @@
     margin-bottom: 30px;
     margin-right: auto;
     margin-left: auto;
+
+    @media (min-width: 768px) {
+      width: 360px;
+    }
 
     @media (min-width: 1200px) {
       width: 696px;
