--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -6,10 +6,13 @@
 
   width: 100%;
   height: 796px;
+
   background-color: var(--primary-white-color);
   padding: 48px 40px;
   z-index: 1;
   transition: transform 0.2s;
+
+  overflow-y: scrolls;
 
   @media (min-width: 768px) {
     display: none;
@@ -47,15 +50,23 @@
       margin-bottom: 32px;
     }
     &:last-child {
-      margin-bottom: 302px;
+      margin-bottom: auto;
+
+      @media (min-width: 480px) {
+        margin-bottom: 302px;
+      }
     }
   }
 
   &__link {
     text-decoration: none;
     color: var(--title-text-color);
-    font-size: 40px;
+    font-size: 22px;
     font-weight: 500;
+
+    @media (min-width: 480px) {
+      font-size: 32px;
+    }
 
     &:hover,
     &:focus {
@@ -70,7 +81,10 @@
   }
 
   &__item {
-    padding: 1px 10px;
+    padding: 1px 5px;
+    @media (min-width: 480px) {
+      padding: 1px 10px;
+    }
     &:not(:last-child) {
       border-right: 1px solid rgba(33, 33, 33, 0.2);
     }
@@ -84,10 +98,15 @@
     text-decoration: none;
     color: var(--accent-color);
     font-weight: 500;
-    font-size: 18px;
-    line-height: 1.22;
+    font-size: 14px;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     cursor: pointer;
+
+    @media (min-width: 480px) {
+      font-size: 18px;
+      line-height: 1.22;
+    }
   }
 }
 
